--- a/SOPManagement/Views/Home/UploadSOPFile.cshtml
+++ b/SOPManagement/Views/Home/UploadSOPFile.cshtml
@@ -1,4 +1,5 @@
 ﻿@model SOPManagement.Models.CascadingClass
+
 @{
     /**/
 
@@ -34,6 +35,9 @@
         }
 
         @Html.DropDownListFor(m => m.FileID, new SelectList(""), "Please select a subfolder", new { @class = "form-control" })
+
+
+        @Html.DropDownList("CoulumnName", new SelectList(ViewBag.employees, "useremailaddress", "userfullname"), "--Select--", new { @id = "ddlTable" })
 
 
 
@@ -130,6 +134,283 @@
         <label for="SOPNO" class="label-default">SOP NO:</label>
         <input name="sopno" id="sopno" class="text-info" />
     </div>
+
+
+    <table id="tblReviewers" class="table" cellpadding="0" cellspacing="0">
+
+        <thead>
+
+            <tr>
+
+                <th style="width:150px">Full Name</th>
+
+                <th style="width:150px">Email</th>
+
+                <th></th>
+
+            </tr>
+
+        </thead>
+
+        <tbody>
+
+            @using (var db = new SOPManagement.Models.RadiantSOPEntities())
+            {
+
+                foreach (var usr in db.vwSOPReviewers)
+
+                {
+                    if (usr.fileid == 63)
+
+                    {
+
+
+                            <tr>
+
+                            <td> @usr.userfullname </td >
+
+                            <td> @usr.useremailaddress </td >
+
+                            <td><input type="button" value="Remove" onclick = "Remove(this)" /></td >
+
+
+
+                            </tr>
+                        }
+
+                    }
+                }
+
+        </tbody>
+
+        <tfoot>
+
+            <tr>
+
+
+
+              
+
+                <td>
+
+                    @Html.DropDownList("userid", new SelectList(ViewBag.employees, "useremailaddress", "userfullname"), "Please select", new { @id = "ddlEmployees" })
+                </td>
+                
+
+
+                <td><input type="text" id="txtName" /></td>
+
+                <td><input type="text" id="txtEmail" /></td>
+
+                <td><input type="button" id="btnAdd" value="Add" /></td>
+
+            </tr>
+
+        </tfoot>
+
+    </table>
+
+    <br />
+
+    <input type="button" id="btnSave" value="Save All" />
+
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+
+    <script type="text/javascript" src="http://ajax.cdnjs.com/ajax/libs/json2/20110223/json2.js"></script>
+
+    <script type="text/javascript">
+
+        $("body").on("click", "#btnAdd", function () {
+
+            //Reference the Name and Country TextBoxes.
+
+            var txtName = $("#txtName");
+
+            var txtEmail = $("#txtEmail");
+
+            var txtEmail = $('#ddlEmployees').val();
+            
+
+            //To get the currently selected text:
+           // $('#dropDownId :selected').text();
+
+
+
+            //Get the reference of the Table's TBODY element.
+
+            var tBody = $("#tblReviewers > TBODY")[0];
+
+
+            var eml = $('#ddlEmployees').val();
+
+            var f = searchtable(eml);
+
+            
+            alert(f);
+
+          // document.getElementById("ddlEmployees").contains(eml); 
+
+            if (f !='') {
+
+                alert('already added');
+                return;
+
+            }
+
+            //Add Row.
+
+            var row = tBody.insertRow(-1);
+
+
+
+            //Add Name cell.
+
+            var cell = $(row.insertCell(-1));
+
+            //cell.html(txtName.val());
+
+            cell.html($('#ddlEmployees :selected').text());
+
+            //$('#ddlEmployees :selected').text();
+
+
+
+            //Add Country cell.
+
+            cell = $(row.insertCell(-1));
+
+            //cell.html(txtEmail.val());
+
+            cell.html($('#ddlEmployees').val());
+
+
+
+            //Add Button cell.
+
+            cell = $(row.insertCell(-1));
+
+            var btnRemove = $("<input />");
+
+            btnRemove.attr("type", "button");
+
+            btnRemove.attr("onclick", "Remove(this);");
+
+            btnRemove.val("Remove");
+
+            cell.append(btnRemove);
+
+
+
+            //Clear the TextBoxes.
+
+            txtName.val("");
+
+           // txtEmail.val("");famnb1932
+
+
+        });
+
+
+        function searchtable(eml) {
+
+            var tab = document.getElementById('tblReviewers');
+            var l = tab.rows.length;
+            var s = '';
+            for (var i = 0; i < l; i++) {
+                var tr = tab.rows[i];
+                var cll = tr.cells[1];
+               
+                if (cll.innerText.indexOf(eml) != -1) {
+                    //document.write(i + 1);
+                    
+                    s = 'found';
+                    break;
+                }
+            }
+
+            return s;
+
+        }
+
+
+            
+
+        function Remove(button) {
+
+            //Determine the reference of the Row using the Button.
+
+            var row = $(button).closest("TR");
+
+            var name = $("TD", row).eq(0).html();
+
+            if (confirm("Do you want to delete: " + name)) {
+
+                //Get the reference of the Table.
+
+                var table = $("#tblReviewers")[0];
+
+
+
+                //Delete the Table row using it's Index.
+
+                table.deleteRow(row[0].rowIndex);
+
+            }
+
+        };
+
+
+
+        $("body").on("click", "#btnSave", function () {
+
+            //Loop through the Table rows and build a JSON array.
+
+            var usersarr = new Array();
+
+            $("#tblReviewers TBODY TR").each(function () {
+
+                var row = $(this);
+
+                var user = {};
+
+                user.userfirstname = row.find("TD").eq(0).html();
+
+                user.useremailaddress = row.find("TD").eq(1).html();
+
+                user.userlastname = row.find("TD").eq(0).html();
+
+                usersarr.push(user);
+
+            });
+
+
+
+            //Send the JSON array to Controller using AJAX.
+
+            $.ajax({
+
+                type: "POST",
+
+                url: "/Home/InsertUsers",
+
+                data: JSON.stringify(usersarr),
+
+                contentType: "application/json; charset=utf-8",
+
+                dataType: "json",
+
+                success: function (r) {
+
+                    alert(r + " record(s) inserted.");
+
+                }
+
+            });
+
+        });
+
+    </script>
+
 
 
     <button type="submit" class="btn-primary">Submit</button>
