--- a/SOPManagement/Views/Shared/_Layout.cshtml
+++ b/SOPManagement/Views/Shared/_Layout.cshtml
@@ -40,5 +40,27 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+
+    @*Add this JavaScript in _Layout (when session end 1 minute before this code makes redirect, it makes count time after user last action, not first visit on site)*@
+
+    <script>
+    //session end
+    var sessionTimeoutWarning = @Session.Timeout- 1;
+
+        var sTimeout = parseInt(sessionTimeoutWarning) * 60 * 1000;
+
+        var timeoutHandle = window.setTimeout("SessionEnd()", sTimeout);
+
+        //setTimeout(function SessionEnd() {
+        //    alert('layout');
+        //    window.location = "/Home/LogOff";
+        //}, sTimeout);
+
+        function SessionEnd() {
+            
+        window.location = "/Home/LogOff";
+    }
+    </script>
+
 </body>
 </html>
