made new strongly typed view

--- a/SOPManagement/Views/Shared/DisplaySubfolders.cshtml
+++ b/SOPManagement/Views/Shared/DisplaySubfolders.cshtml
@@ -1,6 +1,6 @@
-﻿@model SOPManagement.Models.deptsopfile
+﻿@model SOPManagement.Models.SOPClass
 
-<option value="">--Select Subfolder--</option>
+<option value="">Please select a subfolder</option>
 
 @if (ViewBag.ddlSubFolders != null)
 {
